...
              horizontalAlignment = Alignment.CenterHorizontally,
              verticalArrangement = Arrangement.Top) {
                LazyColumn(
                    modifier =
                        Modifier.fillMaxSize()
                            .padding(paddingValues)
                            .testTag("setting_lazy_column"),
                    verticalArrangement = Arrangement.spacedBy(5.dp, Alignment.Top),
                    horizontalAlignment = Alignment.CenterHorizontally) {
                      item { Spacer(modifier = Modifier.padding(10.dp).testTag("setting_spacer1")) }
                      item { ModifyName(nameState) }
                      item { Spacer(modifier = Modifier.padding(10.dp).testTag("setting_spacer2")) }
                      item {
                        ModifyProfilePicture(photoState) {
                          checkPermission(context, permission, requestPermissionLauncher) {
                            getContent.launch(imageInput)
                          }
                        }
                      }
                      item { Spacer(modifier = Modifier.padding(10.dp).testTag("setting_spacer3")) }
                      item { AddMemberButtonUID(groupUID, groupViewModel) }
                      item { AddMemberButtonList(isBoxVisible) }
                      item { ShareLinkButton(groupLink.value) }
                      item { Spacer(modifier = Modifier.padding(10.dp).testTag("setting_spacer4")) }
                      item {
                        SaveButton(nameState) {
                          groupViewModel.updateGroup(groupUID, nameState.value, photoState.value)
                          navigationActions.navigateTo(Route.GROUPSHOME)
                        }
                      }
...
fun AddMemberButtonUID(groupUID: String, groupViewModel: GroupViewModel) {
  var isTextFieldVisible by remember { mutableStateOf(false) }
  var text by remember { mutableStateOf("") }
  var showError by remember { mutableStateOf(false) }
  var showSuccess by remember { mutableStateOf(false) }

  Column(modifier = Modifier.testTag("add_member_column")) {
    Button(
        modifier = Modifier.testTag("add_member_button"),
        onClick = {
          isTextFieldVisible = !isTextFieldVisible
          showSuccess = false
          showError = false
...
            ButtonDefaults.buttonColors(
                containerColor = Blue,
            )) {
          Text(
              stringResource(R.string.add_member_with_uid),
              color = Color.White,
              modifier = Modifier.testTag("add_member_button_text"))
        }
  }

  if (isTextFieldVisible) {
    OutlinedTextField(
        modifier = Modifier.testTag("add_memberUID_text_field"),
        value = text,
        onValueChange = { text = it },
        label = {
          Text(
              stringResource(R.string.enter_userID),
              modifier = Modifier.testTag("add_memberUID_text"))
        },
        singleLine = true,
        colors =
            TextFieldDefaults.colors(
                focusedContainerColor = White,
                unfocusedContainerColor = White,
...
  }
  if (showError) {
    Snackbar(
        modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("error_snackbar"),
        action = {
          TextButton(
              modifier = Modifier.fillMaxWidth().testTag("error_button"),
              onClick = { showError = false }) {}
        }) {
          Text(
              stringResource(R.string.can_t_find_a_member_with_this_uid),
              modifier = Modifier.testTag("error_text"))
        }
  }
  if (showSuccess) {
    Snackbar(
        modifier = Modifier.fillMaxWidth().padding(16.dp).testTag("success_snackbar"),
        action = {
          TextButton(
              modifier = Modifier.fillMaxWidth().testTag("success_button"),
              onClick = { showSuccess = false }) {}
        }) {
          Text(
              stringResource(R.string.user_have_been_successfully_added_to_the_group),
              modifier = Modifier.testTag("success_text"))
        }
  }
}

/** Displays the button to allow the sharing of the group link */
@Composable
fun ShareLinkButton(groupLink: String) {
  var isTextVisible by remember { mutableStateOf(false) }
  var text by remember { mutableStateOf("") }

  Column(modifier = Modifier.testTag("share_link_column")) {
    Button(
        modifier = Modifier.testTag("share_link_button"),
        onClick = {
          text = groupLink
          isTextVisible = !isTextVisible
        },
...
            ButtonDefaults.buttonColors(
                containerColor = Blue,
            )) {
          Text(
              stringResource(R.string.share_link),
              color = Color.White,
              modifier = Modifier.testTag("share_link_button_text"))
        }
  }

  if (isTextVisible) {
    OutlinedTextField(
        value = text,
        onValueChange = {},
        readOnly = true,
        modifier = Modifier.padding(16.dp).testTag("share_link_text"),
        colors =
            TextFieldDefaults.colors(
                focusedContainerColor = White,
                unfocusedContainerColor = White,
                unfocusedLabelColor = Blue,
                unfocusedIndicatorColor = Blue,
...
