...
    <string name="no_resources_yet">No resources yet</string>
    <string name="dismiss_button">dismiss button</string>
    <string name="group_profile_picture">Group profile picture</string>
    <string name="search_groups">Search groups</string>
    <string name="are_you_sure_you_want_to_remove_from_the_group">Are you sure you want to remove %1$s from the group ?</string>
    <string name="create_a_group">Create a group</string>
    <string name="save_button">save_button</string>
    <string name="create_topic">Create Topic</string>
    <string name="enter_topic_name">Enter Topic Name</string>
    <string name="resources">Resources</string>
    <string name="strong_users">Strong Users</string>
    <string name="resources_go_here">Resources go here</string>
    <string name="theory">Theory</string>
...
